attempted fix for html overflow issue in User Hub

--- a/Erasmus/src/sass/style.scss
+++ b/Erasmus/src/sass/style.scss
@@ -41,12 +41,14 @@ $grey:                        #ccc;
 /* line 22, ../sass/style.scss */
 html {
   height: 100%;
-  background: #fff;
+  background: #ddd;
+
 }
 
 /* line 24, ../sass/style.scss */
 body {
   min-height: 100%;
+  overflow-x:hidden;
 }
 
 /* line 26, ../sass/style.scss */
@@ -285,6 +287,8 @@ div.rsmsCenterIconContainer a p {
 /* line 145, ../sass/style.scss */
 .userList{
   background:white;
+  max-width: 100%;
+  overflow-x: scroll;
   th{
     h1{
       display: inline-block;
@@ -292,6 +296,7 @@ div.rsmsCenterIconContainer a p {
   }
 }
 .userList tr {
+  max-width: 100%;
   border: none;
   th{
     font-size:18px;
